--- a/app/habbajet.html
+++ b/app/habbajet.html
@@ -1,7 +1,14 @@
 <ActionBar title="Habbajet" class="actionBar"></ActionBar>
 
 <StackLayout>
-    <Label text="Create New Habbajet" (tap)="newHabbajet()" class="addButton" [visibility]="habbajet ? 'collapse' : 'visible'"></Label>
+    <StackLayout [visibility]="habbajet ? 'collapse' : 'visible'">
+        <GridLayout rows="100, 200" columns="auto, auto"></GridLayout>
+            <Label text="Name: "></Label>
+            <TextField row="0" col="1" [text]="newHabbajetName" id="nameField"></TextField>
+            <Label text="Value: "></Label>
+            <TextField row="1"  [text]="newHabbajetValue" id="valueField"></TextField>
+        <Label text="Create New Habbajet" (tap)="newHabbajet()" class="addButton"></Label>
+    </StackLayout>
 
     <GridLayout rows="50,auto,50,40,40" columns="45,45,45,45,45,45,45" [visibility]="habbajet ? 'visible' : 'collapse'" class="checkboxGrid">
         <Image row="0" col="0" text="0" (tap)="selectHabbajet(0)" [visibility]="habbajetList[0] ? 'visible' : 'collapse'" class="tab"></Image>
@@ -15,8 +22,9 @@
         <Image [src]="habbajet ? habbajet.image : undefined" row="1" col="0" colspan="7" className="bigPicture" (tap)="onImageTap()"></Image>
         <Label [text]="habbajet ? habbajet.name : ''" row="2" col="0" colspan="6" class="habbajetName"></Label>
         <Label [text]="habbajet ? habbajet.activeDay.title : ''" row="3" col="0" colspan="5"  class="date"></Label>
-        <Image src="~/images/checkbox/Positive.png" row="3" col="5" (tap)="check()"></Image>
-        <Image src="~/images/checkbox/Negative.png" row="3" col="6" (tap)="cross()"></Image>
+        <!-- <Image src="~/images/checkbox/Positive.png" row="3" col="5" (tap)="check()"></Image>
+        <Image src="~/images/checkbox/Negative.png" row="3" col="6" (tap)="cross()"></Image> -->
+
         
         <Image [src]="habbajet ? habbajet.checkboxes[0].image : undefined" row="4" col="0"></Image>
         <Image [src]="habbajet ? habbajet.checkboxes[1].image : undefined" row="4" col="1"></Image>
@@ -27,8 +35,13 @@
         <Image [src]="habbajet ? habbajet.checkboxes[6].image : undefined" row="4" col="6"></Image>
     </GridLayout>
 
-    <GridLayout rows="50" columns="150,20,150" class="budgetGrid">
+    <GridLayout rows="90" columns="45, 100, 50, 100, 45" class="responseGrid" [visibility]="habbajet ? 'visible' : 'collapse'">
+        <Image src="~/images/checkbox/ActiveCheck.png" row="0" col="1" (tap)="check()" class="button"></Image>
+        <Image src="~/images/checkbox/ActiveCross.png" row="0" col="3" (tap)="cross()" class="button"></Image>
+    </GridLayout>
+
+    <!-- <GridLayout rows="40" columns="150,20,150" class="budgetGrid">
         <Label row="0" col="0" [text]="budget.totalAmountString" class="moneyBox"></Label>
         <Label row="0" col="2" text="Purchase" (tap)="onPurchaseTap()" class="moneyBox"></Label>
-    </GridLayout>
+    </GridLayout> -->
 </StackLayout>
