--- a/app/habbajet.html
+++ b/app/habbajet.html
@@ -1,15 +1,15 @@
 <ActionBar title="Habbajet" class="actionBar"></ActionBar>
 
 <StackLayout>
-    <GridLayout rows="40" columns="38,38,38,38,38,38,38,*" class="tabGrid">
-            <Label row="0" col="0" text="1" (tap)="selectHabbajet(0)" class="tab" [visibility]="habbajetList[0] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="1" text="2" (tap)="selectHabbajet(1)" class="tab" [visibility]="habbajetList[1] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="2" text="3" (tap)="selectHabbajet(2)" class="tab" [visibility]="habbajetList[2] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="3" text="4" (tap)="selectHabbajet(3)" class="tab" [visibility]="habbajetList[3] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="4" text="5" (tap)="selectHabbajet(4)" class="tab" [visibility]="habbajetList[4] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="5" text="6" (tap)="selectHabbajet(5)" class="tab" [visibility]="habbajetList[5] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="6" text="+" (tap)="onNewHabbajetTap()" class="tab"></Label>
-            <Label row="0" col="7" text="EDIT" (tap)="onEditTap()" [visibility]="habbajet ? (editing ? 'collapse' : 'visible') : 'collapse'"></Label>
+    <GridLayout rows="40" [columns]="columnWidths" class="tabGrid">
+            <Label row="0" col="0" text="+" (tap)="onNewHabbajetTap()" class="tab"></Label>
+            <Label row="0" col="1" [text]="habbajetList[0] ? habbajetList[0].name : ''" (tap)="selectHabbajet(0)" class="tab" [visibility]="habbajetList[0] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="2" [text]="habbajetList[1] ? habbajetList[1].name : ''" (tap)="selectHabbajet(1)" class="tab" [visibility]="habbajetList[1] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="3" [text]="habbajetList[2] ? habbajetList[2].name : ''" (tap)="selectHabbajet(2)" class="tab" [visibility]="habbajetList[2] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="4" [text]="habbajetList[3] ? habbajetList[3].name : ''" (tap)="selectHabbajet(3)" class="tab" [visibility]="habbajetList[3] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="5" [text]="habbajetList[4] ? habbajetList[4].name : ''" (tap)="selectHabbajet(4)" class="tab" [visibility]="habbajetList[4] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="6" [text]="habbajetList[5] ? habbajetList[5].name : ''" (tap)="selectHabbajet(5)" class="tab" [visibility]="habbajetList[5] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="7" [text]="EDIT" (tap)="onEditTap()" [visibility]="habbajet ? (editing ? 'collapse' : 'visible') : 'collapse'"></Label>
     </GridLayout>
 
     <GridLayout rows="auto,50,40,40" columns="45,45,45,45,45,45,45" [visibility]="habbajet ? 'visible' : 'collapse'" class="checkboxGrid">
@@ -35,13 +35,13 @@
                 <Label row="0" col="0" text="Value: " class="textHeading"></Label>
                 <TextField row="0" col="1" [text]="newHabbajetValue" (textChange)="valueChange($event)" id="nameField"></TextField>
             </GridLayout>
-            <Label text="Delete" (tap)="onDeleteTap()"></Label>
+            <Label text="Delete" (tap)="onDeleteTap()" class="deleteButton"></Label>
         </StackLayout>
     </GridLayout>
 
     <GridLayout rows="90" columns="45, 100, 50, 100, 45" class="responseGrid" [visibility]="habbajet ? 'visible' : 'collapse'">
-        <Image [src]="habbajet ? (habbajet.locked ? '~/images/checkbox/InactiveCheck.png' : '~/images/checkbox/ActiveCheck.png') : ''" row="0" col="1" (tap)="check()" class="button"></Image>
-        <Image [src]="habbajet ? (habbajet.locked ? '~/images/checkbox/InactiveCross.png' : '~/images/checkbox/ActiveCross.png') : ''" row="0" col="3" (tap)="cross()" class="button"></Image>
+        <Image [src]="habbajet && habbajet.locked && !editing ? '~/images/checkbox/InactiveCheck.png' : '~/images/checkbox/ActiveCheck.png'" row="0" col="1" (tap)="check()" class="button"></Image>
+        <Image [src]="habbajet && habbajet.locked && !editing ? '~/images/checkbox/InactiveCross.png' : '~/images/checkbox/ActiveCross.png'" row="0" col="3" (tap)="cross()" class="button"></Image>
     </GridLayout>
 
     <StackLayout [visibility]="habbajet ? 'collapse' : 'visible'" class="newHabbajetGrid">
