--- a/app/habbajet.html
+++ b/app/habbajet.html
@@ -2,17 +2,17 @@
 
 <StackLayout>
     <GridLayout rows="40" [columns]="columnWidths" class="tabGrid">
-            <Label row="0" col="0" text="+" (tap)="onNewHabbajetTap()" class="tab"></Label>
-            <Label row="0" col="1" [text]="habbajetList[0] ? habbajetList[0].name : ''" (tap)="selectHabbajet(0)" class="tab" [visibility]="habbajetList[0] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="2" [text]="habbajetList[1] ? habbajetList[1].name : ''" (tap)="selectHabbajet(1)" class="tab" [visibility]="habbajetList[1] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="3" [text]="habbajetList[2] ? habbajetList[2].name : ''" (tap)="selectHabbajet(2)" class="tab" [visibility]="habbajetList[2] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="4" [text]="habbajetList[3] ? habbajetList[3].name : ''" (tap)="selectHabbajet(3)" class="tab" [visibility]="habbajetList[3] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="5" [text]="habbajetList[4] ? habbajetList[4].name : ''" (tap)="selectHabbajet(4)" class="tab" [visibility]="habbajetList[4] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="6" [text]="habbajetList[5] ? habbajetList[5].name : ''" (tap)="selectHabbajet(5)" class="tab" [visibility]="habbajetList[5] ? 'visible' : 'collapse'"></Label>
-            <Label row="0" col="7" [text]="EDIT" (tap)="onEditTap()" [visibility]="habbajet ? (editing ? 'collapse' : 'visible') : 'collapse'"></Label>
+            <Label row="0" col="0" text="+" (tap)="onNewHabbajetTap()" class="tab" [color]="habbajet || habbajetCount < 6 ? '#ebebeb' : '#000000'"></Label>
+            <Label row="0" col="1" [text]="habbajetList[0] ? habbajetList[0].name : ''" (tap)="selectHabbajet(0)" [class]="habbajet && habbajetIndex === 0 ? 'selected tab' : 'tab'" [visibility]="habbajetList[0] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="2" [text]="habbajetList[1] ? habbajetList[1].name : ''" (tap)="selectHabbajet(1)" [class]="habbajet && habbajetIndex === 1 ? 'selected tab' : 'tab'" [visibility]="habbajetList[1] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="3" [text]="habbajetList[2] ? habbajetList[2].name : ''" (tap)="selectHabbajet(2)" [class]="habbajet && habbajetIndex === 2 ? 'selected tab' : 'tab'" [visibility]="habbajetList[2] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="4" [text]="habbajetList[3] ? habbajetList[3].name : ''" (tap)="selectHabbajet(3)" [class]="habbajet && habbajetIndex === 3 ? 'selected tab' : 'tab'" [visibility]="habbajetList[3] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="5" [text]="habbajetList[4] ? habbajetList[4].name : ''" (tap)="selectHabbajet(4)" [class]="habbajet && habbajetIndex === 4 ? 'selected tab' : 'tab'" [visibility]="habbajetList[4] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="6" [text]="habbajetList[5] ? habbajetList[5].name : ''" (tap)="selectHabbajet(5)" [class]="habbajet && habbajetIndex === 5 ? 'selected tab' : 'tab'" [visibility]="habbajetList[5] ? 'visible' : 'collapse'"></Label>
+            <Label row="0" col="7" text="Edit" class="tab" (tap)="onEditTap()" [color]="habbajet ? (editing ? '#000000' : '#ebebeb') : '#000000'"></Label>
     </GridLayout>
 
-    <GridLayout rows="auto,50,40,40" columns="45,45,45,45,45,45,45" [visibility]="habbajet ? 'visible' : 'collapse'" class="checkboxGrid">
+    <GridLayout rows="auto,50,40,40" columns="45,45,45,45,45,45,45" [visibility]="habbajet ? 'visible' : 'collapse'" class="checkboxGrid" id="habbajetDisplay">
         <Image [src]="habbajet ? habbajet.image : undefined" row="0" col="0" colspan="7" className="bigPicture" (tap)="onImageTap()"></Image>
         
         <Label [text]="habbajet ? habbajet.name : ''" row="1" col="0" colspan="6" class="habbajetName" [visibility]="editing ? 'collapse' : 'visible'"></Label>
